[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/GUI/ObjectPopup/RewardPanel/RewardContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GUI/ObjectPopup/ObjectPopupButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GUI/ObjectPopup/RewardPanel/RewardPanel.gd" type="Script" id=3]

[node name="RewardPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardContainer" parent="." instance=ExtResource( 1 )]
visible = false

[node name="ObjectPopupButton" parent="." instance=ExtResource( 2 )]
margin_left = -150.0
margin_top = -50.0
margin_right = -9.99994
margin_bottom = -10.0
btn_text = "CLAIM ALL"
btn_color = Color( 0.537255, 0.960784, 0.298039, 1 )
[connection signal="pressed" from="ObjectPopupButton" to="." method="_on_ObjectPopupButton_pressed"]
